[Create] Show profile info logic
